# greentic-types

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN_MANIFESTO.md  GitVersion.yml  MIGRATION.md  MIGRATION_STATUS.md  MODELS.md  README.md  SCHEMAS.md  SECURITY_FIX_REPORT.md  codex-prompt.txt  pr-changed-files.txt  pr-comment.md
.codex/: PR-01-additive-flow-mapping-aliases.md  PR-TYPES-01-wizard-plan-i18n-hooks.md
.codex/done/: GT-PR-01.md  GT-PR-02.md  PR-00-VISION.md  PR-01-DEPRECATION-SIGNALS.md  PR-01-rename-upgrade-to-update.md  PR-01.md  PR-02-DOCS-SWEEP.md  PR-02-migration-notes.md  TypesValPR-02.md
.githooks/: pre-commit
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  codex-security-fix.yml  codex-semver-fix.yml  crates-publish.yml  dependabot-automerge.yml  dev-publish.yml  nightly-semver.yml  pages.yml  publish.yml  weekly-stable-publish.yml
audit/2026-02-v0.6/: 00_scope_and_method.md  01_vision_contract.md  02_repo_scorecards.md  03_greentic_types_findings.md  04_cross_repo_smells_and_duplicates.md  05_alignment_matrix.md  06_recommendations_and_pr_plan.md  07_delete_deprecate_move_list.md  08_open_questions_and_risks.md
ci/: cargo-config-dev.toml  local_check.sh
docs/: ARCHITECTURE_CONTEXT.md  DISCOVERY_MESSAGING_CANONICAL.md  README.md  audit-wizard-primitives.md  worker.md
docs/audits/: types-alignment-embedded-manifest.md
docs/rfcs/: 2026-05-02-questionkind-table.md
docs/vision/: README.md  canonical-v0.6.md  deprecations.md  legacy.md
examples/: gen_wit_fixtures.rs
fixtures/component/: describe_v0_6_0.cbor  qa_default_v0_6_0.cbor
scripts/: check_schema_ids.sh  deny_dupes.sh  install-hooks.sh
src/: capabilities.rs  component.rs  env.rs  events.rs  flow.rs  flow_resolve.rs  flow_resolve_summary.rs  i18n_text.rs  lib.rs  messaging.rs  node_io.rs  pack_manifest.rs  provider.rs  runtime_config.rs  runtime_dispatch.rs  secrets.rs  session.rs  state_capability.rs  validate.rs  wizard.rs
src/adapters/: component_v0_5_0_to_v0_6_0.rs
src/cbor/: mod.rs
src/messaging/: extensions.rs
src/pack/extensions/: capabilities.rs  fast2flow.rs  mod.rs
src/schemas/component/v0_5_0/: mod.rs
src/schemas/component/v0_6_0/: describe.rs  mod.rs  qa.rs
src/schemas/pack/v0_6_0/: qa.rs
src/telemetry/: mod.rs
tests/: capabilities_auth_caps.rs  flow_helpers.rs  flow_resolve.rs  flow_resolve_summary.rs  messaging_envelope_roundtrip.rs  messaging_extensions.rs  node_io_contract.rs  pack_capabilities_extension.rs  pack_component_sources.rs  pack_manifest_agents.rs  pack_manifest_extensions.rs  pack_manifest_roundtrip.rs  pack_validation_components.rs  provider.rs  schema.rs  secret_key.rs  serde_roundtrip.rs  universal_dto_roundtrip.rs
